# ai-text-recognition

./: .gitignore  best_params.txt  pyproject.toml  requirements.txt
src/: main.py
src/explainability/: shap_analysis.py
src/models/: base_model.py  config.py  cross_validator.py  data_manager.py  explain_model.py  factory.py  lgbm_model.py  lodo_eval.py  logreg_model.py  randfor_model.py  run.py  tune_lgbm.py  tune_xgb.py  xgb_model.py
src/models/evaluation/: lodo.py  statistics.py
src/models/experiments/: base_step.py  builder.py  config.py  context.py  pipeline.py
src/models/experiments/step/: cv.py  hpo.py  load_data.py  lodo.py  shap.py  statistics.py  train.py
src/models/implementations/: lgbm_model.py  logreg_model.py  randfor_model.py  xgb_model.py
src/models/tuning/: __init__.py  hpo_optimizer.py
src/preprocessing/: dynamics.py  run.py  stylometry.py  tokenizer.py  zipf.py
src/results/: log.txt
src/results/Lemmatization OFF/All Features/: LightGBM  LogisticRegression  RandomForest  XGBoost
src/results/Lemmatization ON/All Features/Without Hyperparameter Optimization/: LightGBM  LogisticRegression  RandomForest  XGBoost
src/results/Lemmatization ON/Stylometric Only/Without Hyperparameter Optimization/: LightGBM  LogisticRegression  RandomForest  XGBoost
src/utils/: load_data.py  paths.py
